lib/src/bindings.dart


  /// Returns the index mode of an ndarray.
  int ndarray_index_mode(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_index_mode(
      arr,
    );
  }

  late final _ndarray_index_modePtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_index_mode');
  late final _ndarray_index_mode =
      _ndarray_index_modePtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns the number of elements in an ndarray.
  int ndarray_length(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_length(
      arr,
    );
  }

  late final _ndarray_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_length');
  late final _ndarray_length =
      _ndarray_lengthPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns the number of ndarray dimensions.
  int ndarray_ndims(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_ndims(
      arr,
    );
  }

  late final _ndarray_ndimsPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_ndims');
  late final _ndarray_ndims =
      _ndarray_ndimsPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns an ndarray index offset (in bytes).
  int ndarray_offset(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_offset(
      arr,
    );
  }

  late final _ndarray_offsetPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_offset');
  late final _ndarray_offset =
      _ndarray_offsetPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns the order of an ndarray.
  int ndarray_order(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_order(
      arr,
    );
  }

  late final _ndarray_orderPtr =
      _lookup<ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_order');
  late final _ndarray_order =
      _ndarray_orderPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns the number of ndarray subscript modes.
  int ndarray_nsubmodes(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_nsubmodes(
      arr,
    );
  }

  late final _ndarray_nsubmodesPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ndarray>)>>(
          'ndarray_nsubmodes');
  late final _ndarray_nsubmodes =
      _ndarray_nsubmodesPtr.asFunction<int Function(ffi.Pointer<ndarray>)>();

  /// Returns a pointer to an array containing an ndarray shape (dimensions).
  ffi.Pointer<ffi.Int64> ndarray_shape(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_shape(
      arr,
    );
  }

  late final _ndarray_shapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int64> Function(
              ffi.Pointer<ndarray>)>>('ndarray_shape');
  late final _ndarray_shape = _ndarray_shapePtr
      .asFunction<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ndarray>)>();

  /// Returns an ndarray stride (in bytes).
  int ndarray_stride(
    ffi.Pointer<ndarray> arr,
    int i,
  ) {
    return _ndarray_stride(
      arr,
      i,
    );
  }

  late final _ndarray_stridePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_stride');
  late final _ndarray_stride =
      _ndarray_stridePtr.asFunction<int Function(ffi.Pointer<ndarray>, int)>();

  /// Returns a pointer to an array containing ndarray strides (in bytes).
  ffi.Pointer<ffi.Int64> ndarray_strides(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_strides(
      arr,
    );
  }

  late final _ndarray_stridesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int64> Function(
              ffi.Pointer<ndarray>)>>('ndarray_strides');
  late final _ndarray_strides = _ndarray_stridesPtr
      .asFunction<ffi.Pointer<ffi.Int64> Function(ffi.Pointer<ndarray>)>();

  /// Returns ndarray subscript modes.
  ffi.Pointer<ffi.Int8> ndarray_submodes(
    ffi.Pointer<ndarray> arr,
  ) {
    return _ndarray_submodes(
      arr,
    );
  }

  late final _ndarray_submodesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(
              ffi.Pointer<ndarray>)>>('ndarray_submodes');
  late final _ndarray_submodes = _ndarray_submodesPtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(ffi.Pointer<ndarray>)>();

  /// Returns an ndarray subscript mode.
  int ndarray_submode(
    ffi.Pointer<ndarray> arr,
    int i,
  ) {
    return _ndarray_submode(
      arr,
      i,
    );
  }

  late final _ndarray_submodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_submode');
  late final _ndarray_submode =
      _ndarray_submodePtr.asFunction<int Function(ffi.Pointer<ndarray>, int)>();

  /// Returns an ndarray data element.
  int ndarray_get(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Void> out,
  ) {
    return _ndarray_get(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Void>)>>('ndarray_get');
  late final _ndarray_get = _ndarray_getPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Void>)>();

  /// Returns a double-precision floating-point ndarray data element.
  int ndarray_get_float64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _ndarray_get_float64(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Double>)>>('ndarray_get_float64');
  late final _ndarray_get_float64 = _ndarray_get_float64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Double>)>();

  /// Returns a single-precision floating-point ndarray data element.
  int ndarray_get_float32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Float> out,
  ) {
    return _ndarray_get_float32(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Float>)>>('ndarray_get_float32');
  late final _ndarray_get_float32 = _ndarray_get_float32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Float>)>();

  /// Returns an unsigned 64-bit integer ndarray data element.
  int ndarray_get_uint64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Uint64> out,
  ) {
    return _ndarray_get_uint64(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Uint64>)>>('ndarray_get_uint64');
  late final _ndarray_get_uint64 = _ndarray_get_uint64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Uint64>)>();

  /// Returns a signed 64-bit integer ndarray data element.
  int ndarray_get_int64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Int64> out,
  ) {
    return _ndarray_get_int64(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int64>)>>('ndarray_get_int64');
  late final _ndarray_get_int64 = _ndarray_get_int64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>)>();

  /// Returns an unsigned 32-bit integer ndarray data element.
  int ndarray_get_uint32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Uint32> out,
  ) {
    return _ndarray_get_uint32(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Uint32>)>>('ndarray_get_uint32');
  late final _ndarray_get_uint32 = _ndarray_get_uint32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Uint32>)>();

  /// Returns a signed 32-bit integer ndarray data element.
  int ndarray_get_int32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Int32> out,
  ) {
    return _ndarray_get_int32(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int32>)>>('ndarray_get_int32');
  late final _ndarray_get_int32 = _ndarray_get_int32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int32>)>();

  /// Returns an unsigned 16-bit integer ndarray data element.
  int ndarray_get_uint16(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Uint16> out,
  ) {
    return _ndarray_get_uint16(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Uint16>)>>('ndarray_get_uint16');
  late final _ndarray_get_uint16 = _ndarray_get_uint16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Uint16>)>();

  /// Returns a signed 16-bit integer ndarray data element.
  int ndarray_get_int16(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Int16> out,
  ) {
    return _ndarray_get_int16(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int16>)>>('ndarray_get_int16');
  late final _ndarray_get_int16 = _ndarray_get_int16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int16>)>();

  /// Returns an unsigned 8-bit integer ndarray data element.
  int ndarray_get_uint8(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Uint8> out,
  ) {
    return _ndarray_get_uint8(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Uint8>)>>('ndarray_get_uint8');
  late final _ndarray_get_uint8 = _ndarray_get_uint8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Uint8>)>();

  /// Returns a signed 8-bit integer ndarray data element.
  int ndarray_get_int8(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Int8> out,
  ) {
    return _ndarray_get_int8(
      arr,
      sub,
      out,
    );
  }

  late final _ndarray_get_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Int8>)>>('ndarray_get_int8');
  late final _ndarray_get_int8 = _ndarray_get_int8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int8>)>();
